[package]
name = "request_log_analyzer"
version = "4.0.0"
authors = ["pixelistik"]
repository = "https://github.com/pixelistik/request_log_analyzer"
license = "MIT"
description = """
Extracts some performance metrics from the request.log of a CQ/AEM instance.

Example output:
count:          54510 (number of analyzed requests)
time.avg:       127
time.min:       1
time.median:    6
time.90percent: 27
time.99percent: 3614
time.max:       15747 (times are in milliseconds)

Note: When analyzing more than 10.000 lines, median and percentiles are
approximated for performance.

License: MIT, see
https://github.com/pixelistik/request_log_analyzer/blob/master/LICENSE
https://crates.io/crates/clap
https://crates.io/crates/chrono
https://crates.io/crates/hyper
https://crates.io/crates/prometheus
"""

[dependencies]
failure = "0.1.5"
chrono = "0.4"
clap = "2.33"
log = "*"
env_logger = "*"
prometheus = { git = "https://github.com/pingcap/rust-prometheus" }
hyper = "0.10"
aggregated_stats = { git = "https://github.com/pixelistik/aggregated_stats" }
flate2 = "1.0"

[profile.release]
# https://lifthrasiir.github.io/rustlog/why-is-a-rust-executable-large.html
lto = true
